# ASR-decoder

./: .gitignore  LICENSE  README.md  arm.mk  bashrc  hubo.mk  makefile
src/: Makefile.am  README  README.txt  build.sh  configure.ac  depend.mk  hubo.mk  kaldi.mk  makefile
src/align/: Makefile.am  align-info.h  makefile  phone-to-word.cc  phone-to-word.h  run.sh  test-align-info.cc  test-phone-to-word.cpp
src/audio-convert/: makefile  stream2pcm.cc  stream2pcm.h
src/biglm/: Makefile.am  lattice-read-and-write.cc
src/client/: Makefile.am  asr-client-api-test.cc  asr-client-api.cc  asr-client-api.h  asr-client-task.cc  asr-client-task.h  client.py
src/clientbin/: Makefile.am  thread-client.cc
src/decoder/: Makefile.am  clg-fst.h  clg-lattice-faster-online-decoder.cpp  clg-lattice-faster-online-decoder.h  decoder-graph.h  faster-decoder.cc  faster-decoder.h  graph.h  lattice-faster-decoder-conf.h  lattice-faster-decoder.cc  lattice-faster-decoder.cpp  lattice-faster-decoder.h  log.h  makefile  mem-optimize-clg-lattice-faster-online-decoder.cc  mem-optimize-clg-lattice-faster-online-decoder.cpp  mem-optimize-clg-lattice-faster-online-decoder.h  mem-optimize-hclg-lattice-faster-online-decoder.cc  mem-optimize-hclg-lattice-faster-online-decoder.cpp  mem-optimize-hclg-lattice-faster-online-decoder.h  online-clg-decoder-mempool-base.h  online-decoder-base-inl.h  online-decoder-base.h  online-decoder-mempool-base-biglm.h  online-decoder-mempool-base.h  optimize-clg-lattice-online-faster-decoder-kaldifeature-test.cpp  optimize-ctc-faster-decoder.h  optimize-ctc-lattice-faster-decoder-kaldifeature-test.cpp  optimize-faster-decoder-kaldifeat-test.cpp  optimize-faster-decoder-kaldifeature-test.cpp  optimize-fst.cpp  optimize-fst.h  test-optimize-fst.cpp  wordid-to-wordstr.h
src/fst/: arc.h  compose-lat.cpp  compose-lat.h  connect-fst-all.h  connect-fst.cpp  connect-fst.h  dfs-visit-fst.cpp  dfs-visit-fst.h  fst-queue.h  invert.cpp  invert.h  lattice-determinize-api.h  lattice-determinize.h  lattice-fst.cpp  lattice-fst.h  lattice-functions.cpp  lattice-functions.h  lattice-test.cpp  lattice-to-nbest.cpp  lattice-to-nbest.h  makefile  reverse.cpp  reverse.h  rmepsilon.cpp  rmepsilon.h  test-code  test-code.cpp  test-connect-fst.cpp  test-heap  topsort.cpp  topsort.h
src/fst_format_convert_tool/: Makefile.am  README.txt  convert_fst.c  fst.h  fst_io.h  makefile  read_fst.c  write_fst.c
src/gpu-asr/: Makefile.am  README  gpu-service-run.sh  gpu-worker-pool-itf.h  v1-gpu-asr-service.cc  v1-gpu-asr-task.h  v1-gpu-asr-work-thread.h  v1-gpu-kaldi-worker-pool.h
src/hmm/: Makefile.am  hmm-topology.cc  hmm-topology.h  makefile  test-hmm.cc  test-transition-model.cpp  transition-model.cc  transition-model.cpp  transition-model.h
src/itf/: decodable-itf.h
src/kaldi-bin/: Makefile.am
src/kaldi-nnet3/: Makefile.am  config-decoder.txt  kaldi-online-nnet3-my-decoder-bin.cc  kaldi-online-nnet3-my-decoder-test.cc  kaldi-online-nnet3-my-decoder.cc  kaldi-online-nnet3-my-decoder.h  makefile  run.sh
src/kaldi-nnet3bin/: Makefile.am  kaldi-hclg-my-decoder-biglm.cc  kaldi-hclg-my-decoder.cc  kaldi-my-decoder.cc  kaldi-online-nnet3-my-decoder-bin.cc  makefile  run.sh
src/lm/: README.txt  arpa2fsa.cpp  arpa2fsa.h  compose-arpalm.cpp  compose-arpalm.h  lmrescale.cpp  lmscore.cpp  makefile
src/my-decoder/: Makefile.am  decoder-itf.h  lattice-faster-decoder.cc  lattice-faster-decoder.h  mem-optimize-clg-lattice-faster-online-decoder.cc  mem-optimize-clg-lattice-faster-online-decoder.h  mem-optimize-hclg-lattice-faster-online-decoder.cc  mem-optimize-hclg-lattice-faster-online-decoder.h  online-clg-decoder-mempool-base.h  online-decoder-base-inl.h  online-decoder-base.h  online-decoder-mempool-base-biglm.h  online-decoder-mempool-base.h  optimize-clg-lattice-online-faster-decoder-kaldifeature-test.cc
src/newfst/: Makefile.am  arc-iter.h  arc.h  compose-lat-inl.h  compose-lat.cpp  compose-lat.h  connect-fst.cc  connect-fst.h  const-fst-read.cc  const-fst.h  dfs-visit-fst.cc  dfs-visit-fst.h  invert.cc  lattice-determinize-api.cc  lattice-determinize-api.h  lattice-determinize.h  lattice-fst.cc  lattice-fst.h  lattice-functions.cpp  lattice-functions.h  lattice-test.cc  lattice-to-nbest.cc  lattice-to-nbest.h  makefile  optimize-fst.h  reverse.cpp  reverse.h  rmepsilon.cc  rmepsilon.h  test-code.cpp  test-connect-fst.cpp  topsort.cc  topsort.h  weigth.h
src/newlm/: Makefile.am  arpa2fsa-bin.cpp  arpa2fsa.cc  arpa2fsa.cpp  arpa2fsa.h  compose-arpalm.cpp  compose-arpalm.h  compose-diff-text.cc  compose-text.cpp  diff-lm.h  lat-compose.cc  lmrescale.cc  lmrescale.cpp  lmscore.cpp  makefile
src/nnet/: FeatureExtractor.h  Makefile.am  cudnn-lstm-layer.cpp  cudnn-lstm-layer.h  decodable-itf.h  fbanks.cfg  forward-test.cpp  kaldi-format-pitch-forward-test.cpp  kaldi-forward-test.cc  kaldi-forward-test.cpp  lstm-layer.cpp  lstm-layer.h  lstm-projected-layer.cc  lstm-projected-layer.cpp  lstm-projected-layer.h  makefile  matrix.cc  matrix.cpp  matrix.h  nnet-component.cc  nnet-component.h  nnet-feature-api-test.cpp  nnet-feature-api.cpp  nnet-feature-api.h  nnet-feature-pitch-api.cpp  nnet-forward.h  nnet-layer.cc  nnet-layer.cpp  nnet-layer.h  nnet-nnet.cc  nnet-nnet.cpp  nnet-nnet.h  nnet-read-test.cpp  nnet-simple-recurrent.cc  nnet-simple-recurrent.cpp  nnet-simple-recurrent.h  nnet-util.cpp  nnet-util.h  nnetread.cpp  pitch-forward-test.cpp  (+3 more)
src/old-decoder/: clg-lattice-faster-online-decoder.h  faster-decoder.h  lattice-faster-decoder.h  makefile  optimize-clg-lattice-online-faster-decoder-kaldifeature-test.cpp  optimize-ctc-faster-decoder-kaldifeature-test.cpp  optimize-ctc-faster-decoder.cpp  optimize-ctc-faster-decoder.h  optimize-faster-decoder-kaldifeat-test.cpp  optimize-faster-decoder-kaldifeature-test.cpp  optimize-faster-decoder-test.cpp  optimize-faster-decoder.cc  optimize-faster-decoder.h  optimize-fst.cpp  test-optimize-fst.cpp
src/online-vad/: Makefile.am  new-online-energy-vad-stream-test.cc  online-energy-vad-stream-test.cc  online-nnet3-vad-stream-test.cc  online-vad.h  (+3 more)
(+328 files in other folders)
